--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                         <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                     </h1>
                 </div>
-                <ul class="outlined-text no-bullets">
-                    <li>Christian</li>
-                    <ul class="no-bullets">
+                <ul class="no-bullets">
+                    <li class="outlined-text-semibig">Christian</li>
+                    <ul class="outlined-text no-bullets">
                         <li><a href="https://www.euljiro.org/" target="_blank">The Eulji-ro Presbyterian Church, Seoul, South Korea</a></li>
                     </ul>
-                    <li>Postdoctoral researcher</li>
-                    <ul class="no-bullets">
+                    <li class="outlined-text-semibig">Postdoctoral researcher</li>
+                    <ul class="outlined-text no-bullets">
                         <li><a href="https://www.ccs.tsukuba.ac.jp/ccs_introduction/teacher/list/depart_particle/" target="_blank">Center for Computational Sciences, University of Tsukuba, 1-1-1 Tennodai, Tsukuba, Ibaraki 305-8577, Japan</a></li>
                         <li>
                             E-mail: Please click <a href="https://orcid.org/0000-0002-5438-5490" target="_blank">ORCiD&nbsp;<i class="fab fa-orcid"></i></a> and use the "Verified email addresses" therein.
@@ -88,77 +88,15 @@
             </div>
             <div class="menus" id="edu">
                 <h3 class="outlined-text-big">Education</h3>
-                <ul class="outlined-text no-bullets">
-                    <li><a href="https://inspirehep.net/literature/2839267" target="_blank">Ph.D.</a></li>
-                    <ul class="no-bullets">
-                        <li>Supervisor: Prof. Weonjong Lee</li>
-                        <li>ソウル大学物理天文学部(理学博士)</li>
-                        <li><a href="https://physics.snu.ac.kr/en" target="_blank">Department of Physics and Astronomy, Seoul National University</a></li>
-                        <li>Mar. 2016 - Feb. 2024</li>
-                    </ul>
-                    <li>Master of Physics</li>
-                    <ul class="no-bullets">
-                        <li>Supervisor: Prof. Kazuyuki Kanaya</li>
-                        <li>筑波大学数理物質科学研究科素粒子理論研究室博士前期課程(物理学修士)</li>
-                        <li><a href="https://www-het.ph.tsukuba.ac.jp/" target="_blank">Particle Theory Group, Faculty of Pure and Applied Science, University of Tsukuba</a></li>
-                        <li>Apr. 2010 - Mar. 2013</li>
-                    </ul>
-                    <li>Bachelor of Science</li>
-                    <ul class="no-bullets">
-                        <li>Supervisor: Prof. Nobuyuki Ishibashi</li>
-                        <li>筑波大学第一学群自然学類物理学主専攻(理学士)</li>
-                        <li><a href="https://sse.tsukuba.ac.jp/introduction/physics/" target="_blank">College of Natural Sciences, First Cluster of Colleges, University of Tsukuba</a></li>
-                        <li>Apr. 2006 - Mar. 2010.</li>
-                    </ul>
-                </ul>
+                <div id="edu-container" class="xml-content"></div>
             </div>
             <div class="menus" id="academic">
                 <h3 class="outlined-text-big">Academic and Other Experience</h3>
-                <ul class="outlined-text no-bullets">
-                    <li>Research Associate</li>
-                    <ul class="no-bullets">
-                        <li>Supervisor: Prof. Weonjong Lee</li>
-                        <li><a href="https://ribs.snu.ac.kr/" target="_blank">The Research Institute of Basic Science, Seoul National University</a></li>
-                        <li>ソウル大学総長任命研究員</li>
-                        <li>Sep. 2015 - Feb. 2016</li>
-                    </ul>
-                    <li>Social Service Personnel</li>
-                    <ul class="no-bullets">
-                        <li><a href="https://mma.go.kr/contents.do?mc=mma0000744" target="_blank">ROK Army Supplementary Service (Mandatory Military Service)</a></li>
-                        <li><a href="https://www.sdm.go.kr/en/eng/main/index.jsp" target="_blank">Seodaemun-gu Office, Seoul, Republic of Korea</a></li>
-                        <li>社会服務要員（大韓民国陸軍補充役）</li>
-                        <li>Jul. 2013 - Aug. 2015</li>
-                    </ul>
-                </ul>
+                <div id="exp-container" class="xml-content"></div>
             </div>
             <div class="menus" id="honor">
                 <h3 class="outlined-text-big">Honors</h3>
-                <ul class="outlined-text no-bullets">
-                    <li>Academic Next Generation Fellowship</li>
-                    <ul class="no-bullets">
-                        <li>基礎学問分野・学問後続世代奨学金</li>
-                        <li>Seoul National University</li>
-                        <li>Mar. 2021 - Feb. 2024</li>
-                    </ul>
-                    <li>GSI Scholarship</li>
-                    <ul class="no-bullets">
-                        <li>講義研究支援奨学金</li>
-                        <li>Seoul National University</li>
-                        <li>Mar. 2017 - Feb. 2019</li>
-                    </ul>                
-                    <li>BK Scholarship</li>
-                    <ul class="no-bullets">
-                        <li>BK(ブレイン・コリア)博士スカラシップ</li>
-                        <li>Seoul National University</li>
-                        <li>Mar. 2016 - Aug. 2016</li>
-                    </ul>
-                    <li>Japan-Korea Joint Government Scholarship</li>
-                    <ul class="no-bullets">
-                        <li>日韓共同理工系学部留学生第6期</li>
-                        <li>University of Tsukuba, MEXT (Japan), MOE (Korea)</li>
-                        <li>Apr. 2006 - Mar. 2010</li>
-                    </ul>
-                </ul>
+                <div id="honor-container" class="xml-content"></div>
             </div>
             <div class="menus" id="talk">
                 <h3 class="outlined-text-big">Presentations</h3>
@@ -166,78 +104,13 @@
             </div>
             <div class="menus" id="publication">
                 <h3 class="outlined-text-big">Publications</h3>
-                <div id="arXiv-container" class="xml-content"></div>
-                <ol class="outlined-text" start="9">                    
-                    <li><a href="https://arxiv.org/abs/1509.00592" target="_blank"><b>Kaon BSM $B$-parameters using improved staggered fermions from $N_f=2+1$ unquenched QCD</b></a></li>
-                    <ul class="no-bullets">
-                        <li>2015-12-22</li>
-                        <li><u>Benjamin J. Choi</u>, Yong-Chull Jang, Chulwoo Jung, Hwancheol Jeong, Jangho Kim, Jongjeong Kim, Sunghee Kim, Weonjong Lee, Jaehoon Leem, Jeonghwan Pak, Sungwoo Park, Stephen R. Sharpe, Boram Yoon</li>
-                        <li><strong>Phys. Rev. D 93, 014511 (2016)</strong></li>
-                        <li><a href="https://arxiv.org/abs/1509.00592 target="_blank"">https://arxiv.org/abs/1509.00592</a></li>
-                        <li><a href="https://doi.org/10.1103/PhysRevD.93.014511" target="_blank">https://doi.org/10.1103/PhysRevD.93.014511</li>
-                    </ul>
-                </ol>
+                <div id="pub-container" class="xml-content"></div>
             </div>
             <div class="menus" id="links">
                 <h3 class="outlined-text-big">External Links</h3>
-                <ul class="outlined-text no-bullets">
-                    <li><a href="https://www-het.ph.tsukuba.ac.jp/~latticeqcd_ai/latticeqcd_ai/" target="_blank">Large-scale lattice QCD simulation and development of AI technology</a></li>
-                    <li><a href="https://chain-track-dd9.notion.site/Lattice-QCD-ML-f88a01373d394ba28c4ac39821b75a63#0674afe907384f87bfc23eb25381c656" target="_blank">Lattice QCD + ML (Notion page of Akio Tomiya)</a></li>
-                    <li><a href="https://qiita.com/cometscome_phys" target="_blank">Qiita Blog of Yuki Nagai</a></li>
-                    <li><a href="https://www.rrz.uni-hamburg.de/services/hpc/bqcd/" target="_blank">BQCD</a></li>
-                    <li><a href="https://research.kek.jp/people/matufuru/Research/Docs/Bridge/index.html" target="_blank">Bridge++ Documents</a></li>
-                    <li><a href="https://compphysschool.github.io/homepage2025/" target="_blank">計算物理春の学校 2025</a></li>
-                    <li><a href="https://sites.google.com/site/postdocrumor/" target="_blank">HEP Theory Postdoc Rumor Mill</a></li>
-                    <li><a href="https://www-het.ph.tsukuba.ac.jp/~benchoi/juhee/" target="_blank">Soprano Juhee Choi</a></li>
-                    <li>Favorite sports team</li>
-                    <ul class="no-bullets"> 
-                        <li><a href="https://www.giants.jp/" target="_blank">Yomiuri Giants</a></li>
-                        <ul class="no-bullets">
-                            <li>A NPB team. Its ballpark is Tokyo dome.</li>
-                        </ul>
-                        <li><a href="https://www.japan-baseball.jp/" target="_blank">Samurai Japan</a></li>
-                        <ul class="no-bullets">
-                            <li>The Japan national baseball team.</li>
-                        </ul>
-                        <li><a href="https://www.hanwhaeagles.co.kr/EN/index.do" target="_blank">Hanwha Eagles</a></li>
-                        <ul class="no-bullets">
-                            <li>A KBO team. Its ballpark is Daejeon Baseball Dream Park.</li>
-                        </ul>
-                    </ul>
-                    <li>Favorite sports star</li>
-                    <ul class="no-bullets">                
-                        <li><a href="https://npb.jp/bis/players/41343824.html" target="_blank">Yutaka Enatsu</a></li>
-                        <ul class="no-bullets">
-                            <li>a.k.a. <em>the 21 balls of Enatsu</em>.</li>
-                        </ul>
-                        <li><a href="https://npb.jp/bis/players/41743865.html" target="_blank">Tsunemi Tsuda</a></li>
-                        <ul class="no-bullets">
-                            <li>a.k.a. <em>the stopper of the flame</em>.</li>
-                        </ul>
-                        <li><a href="https://npb.jp/bis/players/01105111.html" target="_blank">Hisashi Iwakuma</a></li>
-                        <ul class="no-bullets">
-                            <li>A Japanese hero of 2nd World Baseball Classic Championship.</li>
-                        </ul>
-                        <li><a href="http://eng.koreabaseball.com/Teams/PlayerInfoPitcher/Summary.aspx?pcode=79764" target="_blank">JANG, Min Je</a></li>
-                        <ul class="no-bullets">
-                            <li>My favorite Korean professional baseball pitcher of Hanwha Eagles.</li>
-                        </ul>
-                        <li><a href="https://npb.jp/bis/players/01305137.html" target="_blank">Shohei Ohtani</a></li>
-                        <ul class="no-bullets">
-                            <li>The superstar of LA Dodgers.</li>
-                        </ul>
-                        <li><a href="https://www.jfa.jp/samuraiblue/member/mitoma_kaoru.html" target="_blank">Kaoru Mitoma</a></li>
-                        <ul class="no-bullets">
-                            <li>A football player of the <a href="https://www.jfa.jp/samuraiblue/" target="_blank">Samurai Blue</a>. <em>University of Tsukuba Alumni</em>.</li>
-                        </ul>
-                        <li><a href="https://www.jfa.jp/samuraiblue/member/doan_ritsu.html" target="_blank">Ritsu Doan</a></li>
-                        <ul class="no-bullets">
-                            <li>A football player of the <a href="https://www.jfa.jp/samuraiblue/" target="_blank">Samurai Blue</a>.</li>
-                        </ul>
-                    </ul>
-                </ul>
-                <br><br><br><br><br>
+                <div id="link-container" class="xml-content"></div>
             </div>
+            <br><br><br><br><br>
         </main>
         <footer>
             <div class="icon-container">
