--- a/index.html
+++ b/index.html
@@ -39,16 +39,7 @@
         <main>
             <div class="menus" id="jesus">
                 <h3 class="outlined-text-big">The Word of Heavenly Father</h3>
-                <p class="outlined-text word-break">
-                    In the day when I cried out, You answered me, and made me bold with strength in my soul. (Psalm 138:3, NKJV)
-                    <br>
-                    私が呼んだその日に、あなたは私に答え、私のたましいに力を与えて強くされました。(詩編138:3、新改訳)
-                </p>
-                <p class="outlined-text word-break">
-                    I can do all things through Christ who strengthens me. (Philippians 4:13, NKJV)
-                    <br>
-                    私は、私を強くしてくださる方によって、どんなことでもできるのです。(ピリピ人への手紙4:13、新改訳)
-                </p>
+                <div id="jesus-container" class="xml-content"></div>
             </div> 
             <div class="menus" id="bio">
                 <div class="here-icon-container">
@@ -57,34 +48,22 @@
                         <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                     </h1>
                 </div>
+                <div id="bio-container" class="xml-content"></div>
                 <ul class="no-bullets">
-                    <li class="outlined-text-semibig">Christian</li>
-                    <ul class="outlined-text no-bullets">
-                        <li><a href="https://www.euljiro.org/" target="_blank">The Eulji-ro Presbyterian Church, Seoul, South Korea</a></li>
-                    </ul>
-                    <li class="outlined-text-semibig">Postdoctoral researcher</li>
-                    <ul class="outlined-text no-bullets">
-                        <li><a href="https://www.ccs.tsukuba.ac.jp/ccs_introduction/teacher/list/depart_particle/" target="_blank">Center for Computational Sciences, University of Tsukuba, 1-1-1 Tennodai, Tsukuba, Ibaraki 305-8577, Japan</a></li>
-                        <li>
-                            E-mail: Please click <a href="https://orcid.org/0000-0002-5438-5490" target="_blank">ORCiD&nbsp;<i class="fab fa-orcid"></i></a> and use the "Verified email addresses" therein.
-                        </li>
-                        <li>Member of <a href="https://www.jps.or.jp/" target="_blank">the Physical Society of Japan (日本物理学会)</a> since Sep. 2024</li>
-                        <li>Member of <a href="https://www.kps.or.kr/e_index.php" target="_blank">the Korean Physical Society (韓国物理学会)</a> since Feb. 2016</li>
-                        <li><a href="https://inspirehep.net/authors/1421094" target="_blank">iNSPIRE-HEP</a></li>
-                        <li><a href="https://researchmap.jp/benjaminchoi" target="_blank">Researchmap</a></li>
-                        <li>
-                            <div class="here-icon-container">
-                                <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
-                                <a href="https://gitlab.com/saintbenjamin" target="_blank"><i class="fab fa-gitlab"></i></a>
-                                <a href="https://saintbenjamin.wordpress.com/" target="_blank"><i class="fab fa-wordpress"></i></a>
-                                <a href="https://www.linkedin.com/in/saintbenjamin/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                                <a href="https://x.com/BenjaminJChoi" target="_blank"><i class="fab fa-twitter"></i></a>
-                                <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                                <a href="https://www.facebook.com/benjamin.dion.choi" target="_blank"><i class="fab fa-facebook-square"></i></a>                
-                            </div>                                    
-                        </li>
-                    </ul>
+                    <li class="outlined-text-semibig">E-mail: Please click <a href="https://orcid.org/0000-0002-5438-5490" target="_blank">ORCiD&nbsp;<i class="fab fa-orcid"></i></a> and use the "Verified email addresses" therein.</li>
+                    <li>
+                        <div class="here-icon-container">
+                            <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://gitlab.com/saintbenjamin" target="_blank"><i class="fab fa-gitlab"></i></a>
+                            <a href="https://saintbenjamin.wordpress.com/" target="_blank"><i class="fab fa-wordpress"></i></a>
+                            <a href="https://www.linkedin.com/in/saintbenjamin/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://x.com/BenjaminJChoi" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                            <a href="https://www.facebook.com/benjamin.dion.choi" target="_blank"><i class="fab fa-facebook-square"></i></a>                
+                        </div>
+                    </li>                                        
                 </ul>
+                <br/>
             </div>
             <div class="menus" id="edu">
                 <h3 class="outlined-text-big">Education</h3>
