--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
         </header>
         <main>
             <div class="menus" id="jesus">
-                <h3 class="outlined-text-big">The Word of Heavenly Father</h3>
-                <div id="jesus-container" class="xml-content"></div>
+                <h3 class="outlined-text-big fade-in">The Word of Heavenly Father</h3>
+                <div id="jesus-container" class="xml-content fade-in"></div>
             </div> 
             <div class="menus" id="bio">
                 <div class="here-icon-container">
-                    <h1 class="outlined-text-superbig word-break" style="white-space: nowrap;">
+                    <h1 class="outlined-text-superbig word-break fade-in" style="white-space: nowrap;">
                         Benjamin Jaedon Choi (崔 在敦)&nbsp;
                         <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                     </h1>
                 </div>
-                <div id="bio-container" class="xml-content"></div>
-                <ul class="no-bullets">
+                <div id="bio-container" class="xml-content fade-in"></div>
+                <ul class="no-bullets fade-in fade-content">
                     <li class="outlined-text-semibig">E-mail: Please click <a href="https://orcid.org/0000-0002-5438-5490" target="_blank">ORCiD&nbsp;<i class="fab fa-orcid"></i></a> and use the "Verified email addresses" therein.</li>
                     <li>
                         <div class="here-icon-container">
@@ -66,28 +66,28 @@
                 <br/>
             </div>
             <div class="menus" id="edu">
-                <h3 class="outlined-text-big">Education</h3>
-                <div id="edu-container" class="xml-content"></div>
+                <h3 class="outlined-text-big fade-in">Education</h3>
+                <div id="edu-container" class="xml-content fade-in"></div>
             </div>
             <div class="menus" id="academic">
-                <h3 class="outlined-text-big">Academic and Other Experience</h3>
-                <div id="exp-container" class="xml-content"></div>
+                <h3 class="outlined-text-big fade-in">Academic and Other Experience</h3>
+                <div id="exp-container" class="xml-content fade-in"></div>
             </div>
             <div class="menus" id="honor">
-                <h3 class="outlined-text-big">Honors</h3>
-                <div id="honor-container" class="xml-content"></div>
+                <h3 class="outlined-text-big fade-in">Honors</h3>
+                <div id="honor-container" class="xml-content fade-in"></div>
             </div>
             <div class="menus" id="talk">
-                <h3 class="outlined-text-big">Presentations</h3>
-                <div id="talk-container" class="xml-content"></div>
+                <h3 class="outlined-text-big fade-in">Presentations</h3>
+                <div id="talk-container" class="xml-content fade-in"></div>
             </div>
             <div class="menus" id="publication">
-                <h3 class="outlined-text-big">Publications</h3>
-                <div id="pub-container" class="xml-content"></div>
+                <h3 class="outlined-text-big fade-in">Publications</h3>
+                <div id="pub-container" class="xml-content fade-in"></div>
             </div>
             <div class="menus" id="links">
-                <h3 class="outlined-text-big">External Links</h3>
-                <div id="link-container" class="xml-content"></div>
+                <h3 class="outlined-text-big fade-in">External Links</h3>
+                <div id="link-container" class="xml-content fade-in"></div>
             </div>
             <br><br><br><br><br>
         </main>
@@ -113,6 +113,7 @@
                 <p>Benjamin J. Choi</p>
             </div>
         </div>
+        <script src="benji_fade.js"></script>
         <script src="benji_qr.js"></script>
     </body>
 </html>
