--- a/juhee/index.html
+++ b/juhee/index.html
@@ -25,25 +25,25 @@
   </header>
   <main>
     <div class="menus word-break" id="home">
-      <h1 class="outlined-text-big">Soprano Juhee Choi</h1>
+      <h1 class="outlined-text-big fade-in">Soprano Juhee Choi</h1>
       <br><br>
-      <h1 class="outlined-text-semibig">Currently I am</h1>
-      <div id="bio-j-container" class="xml-content"></div>
+      <h1 class="outlined-text-semibig fade-in">Currently I am</h1>
+      <div id="bio-j-container" class="xml-content fade-in"></div>
     </div>
     <br><br>
     <div class="menus word-break" id="edu">
-      <h1 class="outlined-text-semibig">Education</h1>
-      <div id="edu-j-container" class="xml-content"></div>
+      <h1 class="outlined-text-semibig fade-in">Education</h1>
+      <div id="edu-j-container" class="xml-content fade-in"></div>
     </div>
     <br><br>
     <div class="menus word-break" id="honor">
-      <h1 class="outlined-text-semibig">Honors</h1>
-      <div id="honor-j-container" class="xml-content"></div>
+      <h1 class="outlined-text-semibig fade-in">Honors</h1>
+      <div id="honor-j-container" class="xml-content fade-in"></div>
     </div>
     <br><br>
     <div class="menus word-break" id="perf">
-      <h1 class="outlined-text-semibig">Performances</h1>
-      <div id="perf-container" class="xml-content"></div>
+      <h1 class="outlined-text-semibig fade-in">Performances</h1>
+      <div id="perf-container" class="xml-content fade-in"></div>
     </div>
     <br><br><br><br>
   </main>
@@ -69,6 +69,7 @@
         <p>Sop. Juhee Choi</p>
     </div>
   </div>
+  <script src="juhee_fade.js"></script>
   <script src="juhee_qr.js"></script>
 </body>
 </html>
