--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
             </div>
             <ul class="menu">
                 <li class="outlined-text-semibig"><a href="#jesus">Jesus</a></li>
-                <li class="outlined-text-semibig"><a href="#bio">Bio</a></li>
-                <li class="outlined-text-semibig"><a href="#edu">Education</a></li>
-                <li class="outlined-text-semibig"><a href="#academic">Experience</a></li>
+                <li class="outlined-text-semibig"><a href="#bio">Bio.</a></li>
+                <li class="outlined-text-semibig"><a href="#edu">Edu.</a></li>
+                <li class="outlined-text-semibig"><a href="#academic">Exp.</a></li>
                 <li class="outlined-text-semibig"><a href="#honor">Honors</a></li>
-                <li class="outlined-text-semibig"><a href="#talk">Presentations</a></li>
-                <li class="outlined-text-semibig"><a href="#publication">Publications</a></li>
+                <li class="outlined-text-semibig"><a href="#talk">Talks</a></li>
+                <li class="outlined-text-semibig"><a href="#publication">Pub.</a></li>
+                <li class="outlined-text-semibig"><a href="#research">R.S.</a></li>
                 <li class="outlined-text-semibig"><a href="#links">Links</a></li>
             </ul>
         </header>
@@ -84,6 +85,10 @@
             <div class="menus" id="publication">
                 <h3 class="outlined-text-big fade-in">Publications</h3>
                 <div id="pub-container" class="xml-content fade-in"></div>
+            </div>
+            <div class="menus" id="research">
+                <h3 class="outlined-text-big fade-in">Research Statement</h3>
+                <div class="content fade-in" id="res-sta"></div>
             </div>
             <div class="menus" id="links">
                 <h3 class="outlined-text-big fade-in">External Links</h3>
