--- a/res_sta.html
+++ b/res_sta.html
@@ -1,6 +1,6 @@
 <p class="outlined-text-semibig">
-    Data analysis technique: toward the precise determination of
-    $\left|V_{cb}\right|$ using the Oktay-Kronfeld action
+    <em>Data analysis technique: toward the precise determination of
+    $\left|V_{cb}\right|$ using the Oktay-Kronfeld action</em>
 </p>
 
 <p class="outlined-text">
