--- a/index.html
+++ b/index.html
@@ -114,5 +114,6 @@
         </div>
         <script src="benji_fade.js"></script>
         <script src="benji_qr.js"></script>
+        <!-- <script src="benji_spacing.js"></script> -->
     </body>
 </html>
