--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div id="talk-container" class="xml-content fade-in"></div>
             </div>
             <div class="menus" id="publication">
-                <h3 class="outlined-text-big fade-in">Publications</h3>
+                <h3 class="outlined-text-big fade-in">Publications: Mirror of the <a href="http://arxiv.org/a/choi_b_1" target="_blank">Public Author Identifier of arXiv.org</h3>
                 <div id="pub-container" class="xml-content fade-in"></div>
             </div>
             <div class="menus" id="research">
