--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Benjamin J. Choi</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">      
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <div class="background"></div>
@@ -94,9 +94,9 @@
             };
         </script>
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-        <script src="benji.js"></script>
-        <script src="benji_fade.js"></script>
-        <script src="benji_qr.js"></script>
-        <script src="benji_hf.js"></script>
+        <script src="js/benji.js"></script>
+        <script src="js/benji_fade.js"></script>
+        <script src="js/benji_qr.js"></script>
+        <script src="js/benji_hf.js"></script>
     </body>
 </html>
