--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             };
         </script>
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-        <script src="js/benji.js"></script>
-        <script src="js/benji_fade.js"></script>
-        <script src="js/benji_qr.js"></script>
-        <script src="js/benji_hf.js"></script>
+        <script src="js/rxml.js"></script>
+        <script src="js/fade.js"></script>
+        <script src="js/qr_code.js"></script>
+        <script src="js/header_footer.js"></script>
     </body>
 </html>
