--- a/res_sta.html
+++ b/res_sta.html
@@ -1,51 +1,134 @@
 <!-- First -->
 
 <p class="outlined-text-semibig">
-    <em>Machine Learning-based Estimation of the Cumulants of Chiral Condensate using Gradient Boosting Decision Tree Regression</em>
+    <em>A Regression-Based Machine Learning Approach to Traces of Inverse Dirac
+    Operator</em>
 </p>
 
 <p class="outlined-text">
-    In Quantum Chromodynamics (QCD), the calculation of higher-order cumulants
-    of the chiral condensate is necessary to investigate the location of the
-    critical endpoint of the finite-temperature phase transition.
-
-    For example, the kurtosis intersection method is often used to determine the critical endpoint of the finite-temperature phase transition. The calculation of these cumulants of the chiral order parameter involves evaluating $\textrm{Tr} \; M^{-n}$ ($n=1,2,3,4$), i.e., the trace of the inverse Dirac operator raised to the power of up to four. This requires solving a large number of linear equations involving the Dirac matrix.
-
-    In lattice Quantum Chromodynamics (Lattice QCD), the Dirac operator is a
-    very large and sparse matrix. Consequently, solving these linear equations
-    requires the conjugate gradient method, which incurs a very high
-    computational cost.
+    The project I have led since my appointment at the Center for Computational
+    Sciences, University of Tsukuba, is a research effort to reduce the
+    computational cost of measuring physical observables &mdash; traditionally
+    calculated using supercomputers &mdash; by replacing them with machine
+    learning techniques.
 </p>
 
 <p class="outlined-text">
-    Therefore, in this study, we proposed a method to reduce this computational cost by utilizing machine learning to estimate $\mathrm{Tr} M^{-n}$ from more easily computable physical quantities.
+    Specifically, cumulants (susceptibility, skewness, kurtosis) of the chiral
+    condensate, which are computed by leading international research groups such
+    as the HotQCD collaboration, are based on traces of the inverse Dirac
+    operator: $\mathrm{Tr}\,M^{-1}$, $\mathrm{Tr}\,M^{-2}$,
+    $\mathrm{Tr}\,M^{-3}$, and $\mathrm{Tr}\,M^{-4}$. 
 
-    As the estimation method, we adopted a technique that combines gradient boosting decision tree regression and the bias correction approximation method <a href="https://arxiv.org/abs/1807.05971" target="_blank">proposed by Yoon et al.</a>.
+    These values are computed stochastically by preparing multiple random sources,
+    solving the Dirac equation for each source, and averaging the results. 
 
-    Furthermore, as proof-of-concept data, we used lattice QCD simulation results from <a href="https://doi.org/10.22323/1.334.0174" target="_blank">a previous study</a>, which employed the Iwasaki gauge action and an $O(a)$-improved Wilson quark action with four degenerate flavors.
+    This process requires extensive use of the Conjugate Gradient (CG) algorithm,
+    leading to significant computational cost.
 </p>
 
 <p class="outlined-text">
-    In this study, supervised learning was performed as the machine learning approach. The original dataset was divided into two main parts: a labeled dataset and an unlabeled dataset. The labeled dataset was further split into a training set and a bias correction set.
+    Accordingly, I aimed to reduce this cost by replacing or supplementing the
+    traditional measurement process with machine learning. 
 
-    The training set was used exclusively to construct the model for gradient boosting decision tree regression. The trained machine learning model was then used to estimate values for the unlabeled dataset, and bias correction approximation was applied.
+    Specifically, I constructed a supervised $X \to Y$ regression model, where $X$
+    represents a low-cost observable that is relatively easy to compute, and $Y$
+    represents a high-cost target observable. 
 
-    To improve statistical accuracy, we also computed the weighted average of the previously obtained results and the labeled dataset.
-
-    Additionally, we investigated how the estimation accuracy of $\textrm{Tr} \; M^{-n}$ ($n=2,3,4$) changed by varying the proportion of the labeled dataset and the training set within it.
-
-    Here, $\textrm{Tr} \; M^{-1}$ was directly taken from the original dataset as input.
-
-    Subsequently, the susceptibility, skewness, and kurtosis of the chiral condensate were computed and compared with the results obtained using the original dataset.
+    The entire dataset is divided into a labeled set and an unlabeled set; a portion
+    of the labeled set is used as a training set to train the model, and $Y$ is then
+    predicted based on the $X$ values in the unlabeled set.
 </p>
 
 <p class="outlined-text">
-    The results showed that, for all the validation datasets used, even when the labeled dataset comprised only about $5\%$ of the total data, the susceptibility, skewness, and kurtosis all closely matched the values obtained from the original dataset.
+    An important point is that not all of the labeled set is used for training;
+    rather, it is further divided into a training set and a bias correction set, and
+    bias correction is performed based on the latter.
 
-    Therefore, it is possible to compute various cumulants, including kurtosis, with the same accuracy as the original dataset while requiring only about $(100+5+5+5)/400 \approx 28.75 \%$ of the original computational cost.
+    This methodology is based on the bias correction theory presented in
+    <a href="https://arxiv.org/abs/1807.05971" target="_blank">Yoon <i>et al.</i></a>,
+    which is built upon <a href="https://arxiv.org/abs/1208.4349"
+    target="_blank">the All Mode Averaging (AMA) method</a>.
 </p>
 
+<div class="outlined-text">
+    <p>
+        My particular focus was on building a system that evaluates the stability and
+        reliability of machine learning results as two ratios are varied:
+    </p>
+    <ol class="paren-ol">
+        <li>the proportion of the labeled set relative to the full dataset,</li>
+        <li>the proportion of the training set within the labeled set.</li>
+    </ol>
+</div>
 
+<p class="outlined-text">
+    Through this so-called label-train scanning system, I clearly identified regions
+    where prediction performance deteriorates sharply due to insufficient labeled
+    data, as well as regions where performance remains stable given an adequate
+    labeled set.
+</p>
+
+<p class="outlined-text">
+    I gave a talk based on this initial research at Lattice 2024 (Liverpool),
+    just three months after my appointment, and the results were published as
+    <a href="https://arxiv.org/abs/2411.18170v2" target="_blank">Choi <i>et
+    al.</i></a>.
+
+    Since then, the code has evolved beyond simply estimating
+    $\mathrm{Tr}\,M^{-1}$, $\mathrm{Tr}\,M^{-2}$, $\mathrm{Tr}\,M^{-3}$, and
+    $\mathrm{Tr}\,M^{-4}$ using machine learning. 
+
+    It now includes functionality for calculating the chiral condensate
+    cumulants for a single ensemble based on these predictions. 
+
+    Furthermore, it has developed into a complete workflow that automatically
+    performs multi-ensemble reweighting to find the phase transition point
+    (critical $\kappa$), and obtains cumulants through interpolation based on
+    that point.
+</p>
+
+<div class="outlined-text">
+    <p>
+        I have structured the entire research into three integrated and
+        automated phases, and assigned the following names to each module:
+    </p>
+    <ul class="bullet-ul">
+        <li><strong><code>Deborah.jl</code></strong>: machine-learning-based
+        trace estimation (phase&nbsp;1)</li>
+
+        <li><strong><code>Esther.jl</code></strong>: cumulant calculation at
+        single ensemble (phase&nbsp;2)</li>
+
+        <li><strong><code>Miriam.jl</code></strong>: multi-ensemble reweighting
+        and interpolation (phase&nbsp;3)</li>
+    </ul>
+</div>
+
+<p class="outlined-text">
+    Among them, <strong><code>Deborah.jl</code></strong> was mainly used for
+    trace estimation, but it was designed from the beginning with a generalized
+    structure to flexibly support various types of data. 
+
+    To this end, it supports not only linear regression models such as
+    <span class="sc">Lasso</span> and <span class="sc">Ridge</span> but also
+    gradient boosting decision trees via LightGBM.
+</p>
+
+<p class="outlined-text">
+    I organically integrated these three modules to construct a fully automated
+    system that begins with raw data and proceeds all the way to the final
+    physical quantity computation. 
+
+    Through this system, I confirmed a significant reduction in computational cost. 
+
+    Based on these research results, I am currently co-authoring a paper with
+    Professors Hiroshi Ohno and Akio Tomiya, with the goal of publishing it in
+    the near future. 
+
+    The related code will also be released on GitHub concurrently with the
+    publication.
+</p>
 
 <!-- Second -->
 
@@ -57,64 +140,63 @@
 <p class="outlined-text">
     My collaborators in LANL/SWME and I am having been worked for the
     calculation of For the heavy (light) quark, we are using the
-    <a href="https://arxiv.org/abs/0803.0523" target="_blank">Oktay-Kronfeld action</a> (<a href="https://arxiv.org/abs/hep-lat/0610092" target="_blank">HISQ action</a>).
-    For the sea quark, we use the <a href="https://arxiv.org/abs/1212.4768" target="_blank">MILC HISQ ensemble</a>.
+    <a href="https://arxiv.org/abs/0803.0523" target="_blank">Oktay-Kronfeld
+    action</a> (<a href="https://arxiv.org/abs/hep-lat/0610092"
+    target="_blank">HISQ action</a>). For the sea quark, we use the <a
+    href="https://arxiv.org/abs/1212.4768" target="_blank">MILC HISQ
+    ensemble</a>.
 </p>
 
 <p class="outlined-text">
-    During the Ph.D. course days, I have mainly worked on the data
-    analysis technique. For the determination of $\left|V_{cb}\right|$
-    combining with the experimental result, we need to calculate
-    semileptonic form factor such as $\bar{B}\to D^{\ast}\ell\bar{\nu}$
-    at the zero recoil ($w=1$). For it, we need to perform the 3pt
-    correlation function fit on the four channels: $B\to D^{\ast}$,
-    $D^{\ast}\to B$, $B\to B$, $D^{\ast}\to D^{\ast}$. Here, we do not
-    use <a href="https://arxiv.org/abs/0808.2519"
-    target="_blank">$\bar{R}^{\frac{1}{2}}$ constant fit method</a>. We
-    use linear fit of matrix elements for ground state or excited
-    states, using fitting parameters of 2pt correlator fit as input
-    parameters.
+    During the Ph.D. course days, I have mainly worked on the data analysis
+    technique. For the determination of $\left|V_{cb}\right|$ combining with the
+    experimental result, we need to calculate semileptonic form factor such as
+    $\bar{B}\to D^{\ast}\ell\bar{\nu}$ at the zero recoil ($w=1$). For it, we
+    need to perform the 3pt correlation function fit on the four channels: $B\to
+    D^{\ast}$, $D^{\ast}\to B$, $B\to B$, $D^{\ast}\to D^{\ast}$. Here, we do
+    not use <a href="https://arxiv.org/abs/0808.2519"
+    target="_blank">$\bar{R}^{\frac{1}{2}}$ constant fit method</a>. We use
+    linear fit of matrix elements for ground state or excited states, using
+    fitting parameters of 2pt correlator fit as input parameters.
 </p>
 
 <p class="outlined-text">
-    Hence, we need to perform the 2pt correlator fit first. We use
-    sequential Bayesian method. For the least $\chi^{2}$ fitting, we use
-    Broyden-Fletcher-Goldfarb-Shanno algorithm, which is a quasi-Newton
-    method. Any Newton method need its initial guess. If we do not feed
-    good initial guess ($\chi^{2}$-IG) to the $\chi^{2}$ minimizer, then
-    the computing time increases. But if we feed good initial guess to
-    the $\chi^{2}$ minimizer, then we can save computing time
-    dramatically. By this reason, we additionally introduced Newton
-    method to our 2pt correlation function fit. Note that Newton method
-    needs its own initial guess (N-IG). To put N-IG within the radius of
-    convergence, we further introduce scanning method.
+    Hence, we need to perform the 2pt correlator fit first. We use sequential
+    Bayesian method. For the least $\chi^{2}$ fitting, we use
+    Broyden-Fletcher-Goldfarb-Shanno algorithm, which is a quasi-Newton method.
+    Any Newton method need its initial guess. If we do not feed good initial
+    guess ($\chi^{2}$-IG) to the $\chi^{2}$ minimizer, then the computing time
+    increases. But if we feed good initial guess to the $\chi^{2}$ minimizer,
+    then we can save computing time dramatically. By this reason, we
+    additionally introduced Newton method to our 2pt correlation function fit.
+    Note that Newton method needs its own initial guess (N-IG). To put N-IG
+    within the radius of convergence, we further introduce scanning method.
 </p>
 
 <p class="outlined-text">
-    To solve the Newton method, we need multiple time slices which is
-    equal to the number of fitting parameters. Those time slices can be
-    chosen within the fit range. By this, we have multiple time slice
-    combinations. Before the least $\chi^{2}$ fitting, we try Newton
-    method for all possible such time slice combinations. If the Newton
-    method finds roots, we save them. Or we abandon that time slice
-    combination. In the coarse lattice, at the final step of the
-    sequential Bayesian method, Newton method find
+    To solve the Newton method, we need multiple time slices which is equal to
+    the number of fitting parameters. Those time slices can be chosen within the
+    fit range. By this, we have multiple time slice combinations. Before the
+    least $\chi^{2}$ fitting, we try Newton method for all possible such time
+    slice combinations. If the Newton method finds roots, we save them. Or we
+    abandon that time slice combination. In the coarse lattice, at the final
+    step of the sequential Bayesian method, Newton method find
     $O\left(10^{4}\right)$ roots. In order to monitor statistics for the
-    $\chi^{2}$ distribution, we randomly select $O\left(10^{3}\right)$
-    roots among them, for example.
+    $\chi^{2}$ distribution, we randomly select $O\left(10^{3}\right)$ roots
+    among them, for example.
 </p>
 
 <p class="outlined-text">
-    By this kind of combination of scanning method, Newton method and
-    sequential Bayesian method, we can find global minimum and local
-    minima of $\chi^{2}$, consuming up all possible time slices. I
-    updated our fitting code. I developed and applied multidimensional
-    iterative scanning method to our fitting code. And I applied
-    multidimensional Newton method to our fitting code. 
+    By this kind of combination of scanning method, Newton method and sequential
+    Bayesian method, we can find global minimum and local minima of $\chi^{2}$,
+    consuming up all possible time slices. I updated our fitting code. I
+    developed and applied multidimensional iterative scanning method to our
+    fitting code. And I applied multidimensional Newton method to our fitting
+    code. 
 </p>
 
 <p class="outlined-text">
-    Through these accomplishments, I am interested in the combinations
-    of two or more various algorithms to compensate each other, such as
-    sequential Bayesian method and Newton method.
+    Through these accomplishments, I am interested in the combinations of two or
+    more various algorithms to compensate each other, such as sequential
+    Bayesian method and Newton method.
 </p>
