--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="menus" id="talk">
                 <h3 class="outlined-text-big fade-in">Presentations</h3>
-                <div id="talk-container" class="xml-content fade-in"></div>
+                <div id="talk-container"></div>
             </div>
             <div class="menus" id="publication">
                 <h3 class="outlined-text-big fade-in">Publications: Mirror of the <a href="http://arxiv.org/a/choi_b_1" target="_blank">Public Author Identifier of arXiv.org</a></h3>
