--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
         <title>Benjamin J. Choi</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">      
         <link rel="stylesheet" href="css/main.css">
+        <!-- arXiv myarticles setting -->
+        <script type="text/javascript">
+        //<![CDATA[
+            // mandatory: my author id
+            var arxiv_authorid = "choi_b_1";
+
+            // overall style: "pretty" (for sidebar) or "arxiv"
+            var arxiv_format = "arxiv";
+
+            // total show number (0 = all)
+            var arxiv_max_entries = 0;
+
+            // page has big title already. Hence hide the original one.
+            var arxiv_includeTitle = 1;
+
+            // Do not show abstract = 0, show it = 1
+            var arxiv_includeSummary = 1;
+        //]]>
+        </script>
+
+        <!-- actual widget script -->
+        <script type="text/javascript" src="https://arxiv.org/js/myarticles.js"></script>
     </head>
     <body>
         <div class="background"></div>
@@ -56,8 +78,10 @@
                 <div id="talk-container"></div>
             </div>
             <div class="menus" id="publication">
-                <h3 class="outlined-text-big fade-in">Publications: Mirror of the <a href="http://arxiv.org/a/choi_b_1" target="_blank">Public Author Identifier of arXiv.org</a></h3>
-                <div id="pub-container" class="xml-content fade-in"></div>
+                <h3 class="outlined-text-big fade-in">Publications: <a href="http://arxiv.org/a/choi_b_1" target="_blank">Public Author Identifier of arXiv.org</a></h3>
+                <div id="pub-container" class="xml-content fade-in">
+                    <div id="arxivfeed">Loading arXiv articles...</div>
+                </div>
             </div>
             <div class="menus" id="research">
                 <h3 class="outlined-text-big fade-in">Research Statement</h3>
