--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
             // Do not show abstract = 0, show it = 1
             var arxiv_includeSummary = 1;
+
+            var arxiv_includeComments = 0;
+            var arxiv_includeSubjects = 0;
         //]]>
         </script>
 
