--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             var arxiv_max_entries = 0;
 
             // page has big title already. Hence hide the original one.
-            var arxiv_includeTitle = 1;
+            var arxiv_includeTitle = 0;
 
             // Do not show abstract = 0, show it = 1
             var arxiv_includeSummary = 0;
@@ -77,7 +77,7 @@
                 <div id="honor-container" class="xml-content fade-in"></div>
             </div>
             <div class="menus" id="publication">
-                <h3 class="outlined-text-big fade-in">Publications: <a href="http://arxiv.org/a/choi_b_1" target="_blank">Public Author Identifier of arXiv.org</a></h3>
+                <h3 class="outlined-text-big fade-in">Publications</h3>
                 <div id="pub-container" class="xml-content fade-in">
                     <div id="arxivfeed">Loading arXiv articles...</div>
                 </div>
