--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
         <title>Benjamin J. Choi</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">      
         <link rel="stylesheet" href="css/main.css">
-        <!-- arXiv myarticles setting -->
-        <script type="text/javascript">
-            var arxiv_authorid = "choi_b_1";
-            var arxiv_format = "arxiv";
-            var arxiv_max_entries = 0;
-            var arxiv_includeTitle = 0;
-            var arxiv_includeSummary = 0;
-            var arxiv_includeComments = 0;
-            var arxiv_includeSubjects = 0;
-        </script>
-
-        <!-- actual widget script -->
+        <script src="js/arxiv_config.js"></script>
         <script type="text/javascript" src="https://arxiv.org/js/myarticles.js"></script>
     </head>
     <body>
@@ -100,14 +89,7 @@
                 <p>Benjamin J. Choi</p>
             </div>
         </div>
-        <script>
-            MathJax = {
-                tex: {
-                    inlineMath: [['$', '$']], // Define $...$ for inline math
-                    displayMath: [['$$', '$$']] // $$...$$ for block math
-                }
-            };
-        </script>
+        <script src="js/mathjax_config.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script src="js/rxml.js"></script>
         <script src="js/fade.js"></script>
