--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">      
         <link rel="stylesheet" href="css/main.css">
         <script src="js/arxiv_config.js"></script>
-        <script type="text/javascript" src="https://arxiv.org/js/myarticles.js"></script>
+        <script src="https://arxiv.org/js/myarticles.js"></script>
     </head>
     <body>
         <div class="background"></div>
@@ -61,11 +61,11 @@
             </div>
             <div class="menus" id="talk">
                 <h3 class="outlined-text-big fade-in">Presentations</h3>
-                <div id="talk-container"></div>
+                <div id="talk-container" class="xml-content"></div>
             </div>
             <div class="menus" id="research">
                 <h3 class="outlined-text-big fade-in">Research Statement</h3>
-                <div class="content fade-in" id="res-sta"></div>
+                <div class="content" id="res-sta"></div>
             </div>
             <div class="menus" id="links">
                 <h3 class="outlined-text-big fade-in">External Links</h3>
@@ -89,11 +89,11 @@
                 <p>Benjamin J. Choi</p>
             </div>
         </div>
-        <script src="js/mathjax_config.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-        <script src="js/rxml.js"></script>
-        <script src="js/fade.js"></script>
-        <script src="js/qr_code.js"></script>
-        <script src="js/header_footer.js"></script>
+        <script src="js/mathjax_config.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer></script>
+        <script src="js/rxml.js" defer></script>
+        <script src="js/fade.js" defer></script>
+        <script src="js/qr_code.js" defer></script>
+        <script src="js/header_footer.js" defer></script>
     </body>
 </html>
