--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Benjamin J. Choi</title>
+
+        <!-- Styles -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">      
         <link rel="stylesheet" href="css/main.css">
+
+        <!-- Favicons -->
+        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+        <link rel="shortcut icon" href="icons/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+        <link rel="manifest" href="icons/site.webmanifest">
+
+        <!-- arXiv feed -->
         <script src="js/arxiv_config.js"></script>
         <script src="https://arxiv.org/js/myarticles.js"></script>
     </head>
